# Makefile.am for metar
# 
# $Id: Makefile.am,v 1.2 2005/06/23 07:09:46 kees-guest Exp $
#
# Copyright (C) 2004,2005 Kees Leune

CONFIGURE_DEPENDENCIES = $(top_srcdir)/VERSION.m4

VERSION = @VERSION@

SUBDIRS = . src doc

docdir = $(datadir)/doc/$(PACKAGE)
doc_DATA = AUTHORS README TODO NEWS THANKS

EXTRA_DIST = VERSION.m4 bootstrap
